--- a/vmdemo/src/main/res/layout/activity_demo3.xml
+++ b/vmdemo/src/main/res/layout/activity_demo3.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".demo1.Demo1Activity">
+    tools:context=".demo3.Demo3Activity">
 
     <TextView
-        android:id="@+id/tv_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="name" />
+        android:id="@+id/text_demo3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/btn_refresh"
+        android:id="@+id/btn_demo3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="refresh" />
+        android:text="change" />
+
 </LinearLayout>
