--- a/vmdemo/src/main/res/layout/fragment_c2.xml
+++ b/vmdemo/src/main/res/layout/fragment_c2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".C2Fragment">
+    tools:context=".demo2.C2Fragment">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
